# way-cooler-bg

./: Cargo.toml  Cargo.txt  LICENSE  README.md  build.rs
src/: color.rs  macros.rs  main.rs  resolution.rs
